# AUTOGEO

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
Problem Statement/: asbuilt-georeferencing-brief.md
docs/: labeling-protocol.md  session-handoff.md  spike-findings.md
scripts/: corpus_census.py  spike_ocr_yield.py  spike_reliability.py
src/autogeo/: __init__.py  cli.py  logging.py
src/autogeo/assist/: __init__.py
src/autogeo/batch/: __init__.py
src/autogeo/config/: __init__.py  defaults.yaml  loader.py  schema.py
src/autogeo/context/: __init__.py  crs.py
src/autogeo/gate/: __init__.py
src/autogeo/gis/: __init__.py  baselines.py  cache.py  catalog.py  discovery.py  doctrine.py  rest_client.py
src/autogeo/ingest/: __init__.py  tiling.py
src/autogeo/match/: __init__.py
src/autogeo/models/: __init__.py  control.py  document.py  gate.py  gcp.py  report.py  solve.py
src/autogeo/ocr/: __init__.py  llm_client.py
src/autogeo/output/: __init__.py
src/autogeo/solve/: __init__.py  budget.py  ransac.py  solver.py  transforms.py  validate.py
src/autogeo/synth/: __init__.py  generate.py  model.py
tests/: conftest.py  test_budget.py  test_config.py  test_contracts.py  test_crs.py  test_gis.py  test_llm_client.py  test_ransac.py  test_solver.py  test_synth.py  test_tiling.py  test_transforms.py  test_validate.py
