[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autogeo"
version = "0.1.0"
description = "Automatic georeferencing of as-built PDFs/TIFFs against temporally invariant GIS control"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    # contracts / config / cli
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "PyYAML>=6.0",
    # geospatial core (rasterio bundles GDAL in its Windows wheels — the
    # authoritative warp path; avoids a raw osgeo/GDAL install)
    "numpy>=1.26",
    "scipy>=1.12",
    "shapely>=2.0",
    "pyproj>=3.6",
    "rasterio>=1.3.9",
    "geopandas>=0.14",
    "pyogrio>=0.7",
    "ezdxf>=1.2",
    # imaging / documents / ocr
    "opencv-python>=4.9",
    "scikit-image>=0.23",
    "pymupdf>=1.24",
    "pytesseract>=0.3.10",
    "pillow>=10.0",
    # gis http
    "requests>=2.31",
    "requests-cache>=1.2",
    "rapidfuzz>=3.6",
    # llm + reporting
    "anthropic>=0.34",
    "reportlab>=4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "responses>=0.25",
]

[project.scripts]
autogeo = "autogeo.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"autogeo.config" = ["defaults.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
